# gatt_server_openwrt

./: Doxyfile  README.md  configure.ac
include/: Gobbledegook.h
src/: DBusInterface.cpp  DBusInterface.h  DBusMethod.cpp  DBusMethod.h  DBusObject.cpp  DBusObject.h  DBusObjectPath.h  GattCharacteristic.cpp  GattCharacteristic.h  GattDescriptor.cpp  GattDescriptor.h  GattInterface.cpp  GattInterface.h  GattProperty.cpp  GattProperty.h  GattService.cpp  GattService.h  GattUuid.h  Gobbledegook.cpp  HciAdapter.cpp  HciAdapter.h  HciSocket.cpp  HciSocket.h  Init.cpp  Logger.h  Makefile.am  Mgmt.cpp  Mgmt.h  NtcDbus.cpp  NtcDbus.h  NtcLogger.cpp  NtcLogger.h  NtcUci.cpp  NtcUci.h  NtcUtils.cpp  NtcUtils.h  Server.cpp  Server.h  ServerUtils.cpp  ServerUtils.h  (+5 more)
src/plugins/: BleRssiServicePlugin.cpp  BleRssiServicePlugin.h  DeviceInfoServicePlugin.cpp  DeviceInfoServicePlugin.h  DeviceServicePlugin.cpp  DeviceServicePlugin.h  NtcServicePluginBase.cpp  NtcServicePluginBase.h  PluginTemplate.cpp  PluginTemplate.h  mainServicePlugin.cpp
src/plugins/utils/: DigestAuth.cpp  DigestAuth.h  Ping.cpp
